# bose-soundtouch-api

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
boseapi/: __init__.py  all.py  client.py  firmware.py  model.py  st_client.py  stu.py
boseapi/common/: __init__.py  config.py  device.py  message.py  nodes.py
boseapi/ws/: __init__.py  bosews.py
docs/: conf.py  index.rst  telnet.txt
docs/api/: client.rst  config.rst  device.rst  interface.rst  message.rst  stu.rst  ws.rst
docs/source/: conf.py  index.rst
docs/source/api/: message.rst  stu.rst
test/: webtest.py  ws_test.py
